--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">EventPlanner</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="insights">Insights</string>
+    <string name="events">Events</string>
+    <string name="calendar">Calendar</string>
+    <string name="add">Add</string>
+    <string name="profile">Profile</string>
+    <string name="missed">Missed</string>
+    <string name="upcoming">Upcoming</string>
+    <string name="done">Done</string>
+    <string name="add_event">Add Event</string>
+    <string name="add_category">Add Category</string>
 </resources>
