--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="done">Done</string>
     <string name="add_event">Add Event</string>
     <string name="add_category">Add Category</string>
+    <string name="event_image">Event Image</string>
+    <string name="textview">TextView</string>
 </resources>
