--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
     <string name="add_category">Add Category</string>
     <string name="event_image">Event Image</string>
     <string name="textview">TextView</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="date">Date (dd-mm-yyyy)</string>
+    <string name="location">Location</string>
+    <string name="not_done">Not done</string>
+    <string name="time_hh_mm">Time (hh:mm)</string>
+    <string name="divider">|</string>
+    <string name="event_frequency">Event Frequency</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
