--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="textview">TextView</string>
     <string name="name">Name</string>
     <string name="description">Description</string>
-    <string name="date">Date (dd-mm-yyyy)</string>
+    <string name="date">Date (dd-mm-yyyy) or (dd/mm/yyyy)</string>
     <string name="location">Location</string>
     <string name="not_done">Not done</string>
     <string name="time_hh_mm">Time (hh:mm)</string>
